[package]
name = "celeste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
bevy = "0.11"
bevy_rapier2d = "0.22"
bevy_ecs_ldtk = "0.8"
rand = "0.8"

[build-dependencies]
embed-resource = "2.4.0"
